Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71013

BarSeries.at(index) returns null when VBarModelMapper is used

    XMLWordPrintable

Details

    • eb852ca7e5800577762663bc72b1f9d009cf7e51 (qt/qtcharts/5.12)

    Description

      When using QAbstractItemModel in Qt Quick Chart application via VBarModelMapper, getting a BarSet with BarSeries.at(index) returns null. When the BarSets are defined in QML, at() function works correctly returning the requested BarSet object.

      Attached example can be used to reproduce the problem. Just run it. The result of BarSeries.at() is printed to the debug output.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkalinow Maurice Kalinowski
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes